[package]
name = "typeholder"
version = "0.0.1"
authors = ["Yue Liu <yue.liu@mail.com>"]
build = "build.rs"

[build-dependencies]
itertools = "0.6.0"
linked-hash-map = "0.4.2"

[dependencies]
glib = "0.1.3"
gtk = { version = "0.1.3", features = ["v3_14"] }
#gdk = { git = "https://github.com/gtk-rs/gdk" }
#pango = { git = "https://github.com/gtk-rs/pango" }
gettext-rs = "0.3.0"
sxd-document = "0.2.3"
lazy_static = "0.2"
itertools = "0.6.0"