[package]
name = "typeholder"
version = "0.0.1"
authors = ["Yue Liu <yue.liu@mail.com>"]
build = "build.rs"

[build-dependencies]
itertools = "0.6.0"
linked-hash-map = "0.4.2"

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib", features = [ "v2_46" ] }
gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_14"] }
pango = { git = "https://github.com/gtk-rs/pango", features = ["v1_36_7"] }
gettext-rs = "0.3.0"
sxd-document = "0.2.3"
lazy_static = "0.2"
itertools = "0.6.0"